[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/select.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sfx/swap.wav" type="AudioStream" id=3]

[node name="Options" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 365.0
margin_top = 160.0
margin_right = 715.0
margin_bottom = 560.0
rect_min_size = Vector2( 350, 400 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 343.0
margin_bottom = 393.0
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 20.0
margin_right = 296.0
margin_bottom = 376.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 14.0
text = "%CONFIG%"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 28.0
margin_top = 18.0
margin_right = 228.0
margin_bottom = 33.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
custom_constants/separation = 15

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 256.0
margin_bottom = 225.0
custom_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 20.0
margin_right = 256.0
margin_bottom = 188.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 98.0
margin_bottom = 15.0
text = "%TEXT_SPEED%"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 149.0
margin_right = 256.0
margin_bottom = 16.0
size_flags_horizontal = 10

[node name="TextSpeedDisplay" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 23.0
margin_bottom = 15.0
size_flags_horizontal = 10
text = "40c"

[node name="TextSpeed" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 27.0
margin_right = 107.0
margin_bottom = 16.0
rect_min_size = Vector2( 80, 0 )
focus_neighbour_top = NodePath("../../../VBoxContainer/PT_BR")
focus_neighbour_bottom = NodePath("../../../HBoxContainer2/HBoxContainer/Volume")
mouse_filter = 2
size_flags_horizontal = 10
min_value = 10.0
max_value = 200.0
step = 10.0
value = 40.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 256.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 49.0
margin_bottom = 15.0
text = "Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 136.0
margin_right = 256.0
margin_bottom = 16.0
size_flags_horizontal = 10

[node name="VolumeDisplay" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_top = 1.0
margin_right = 36.0
margin_bottom = 15.0
size_flags_horizontal = 10
text = "100%"

[node name="Volume" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_left = 40.0
margin_right = 120.0
margin_bottom = 16.0
rect_min_size = Vector2( 80, 0 )
focus_neighbour_top = NodePath("../../../HBoxContainer/HBoxContainer/TextSpeed")
focus_neighbour_bottom = NodePath("../../../VBoxContainer/EN_US")
mouse_filter = 2
size_flags_horizontal = 10
step = 10.0
value = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 256.0
margin_bottom = 168.0
custom_constants/separation = 10

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 256.0
margin_bottom = 28.0
text = "%LANGUAGE%"
align = 1

[node name="EN_US" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 256.0
margin_bottom = 62.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../HBoxContainer2/HBoxContainer/Volume")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../PT_BR")
text = "English"

[node name="PT_BR" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 256.0
margin_bottom = 96.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../EN_US")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../HBoxContainer/HBoxContainer/TextSpeed")
text = "PortuguÃªs Brasil"

[node name="Swap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="focus_exited" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/TextSpeed" to="." method="_swap"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/TextSpeed" to="." method="_on_TextSpeed_value_changed"]
[connection signal="focus_exited" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Volume" to="." method="_swap"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Volume" to="." method="_on_Volume_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/EN_US" to="." method="_on_EN_US_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/PT_BR" to="." method="_on_PT_BR_pressed"]
